--- a/css/theme-ebi-services-about.css
+++ b/css/theme-ebi-services-about.css
@@ -33,6 +33,7 @@ a.tag:hover { color: #fff; }
 .tabs-title > a:hover,
 .button.primary:hover,
 .button.primary:focus,
+.button.hover,
 .button:hover,
 .button:focus,
 .button:active { background: rgba(56,145,152,.9); }
