--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -924,11 +924,10 @@ table.no-stripe tbody tr:nth-child(even) { background-color: #fff; }
 
 /* wide screen support */
 @media screen and (min-width: 40em) {
-  body.full-width .row {
-      max-width: 99%;
-      min-width: 1000px;
+  body.full-width .row,
+  body.full-width .row .row {
+    max-width: 150rem;
   }
-  body.full-width .row .row { max-width: 100%; }
 }
 
 /* tag */
