Update compiled source

--- a/libraries/foundation-6/css/foundation.css
+++ b/libraries/foundation-6/css/foundation.css
@@ -1849,7 +1849,7 @@ select {
   display: inline-block;
   padding: 0.3em;
   min-width: 2.1em;
-  font-size: 0.6rem;
+  font-size: inherit;
   text-align: center;
   border-radius: 50%;
   background: #007c82;
