Darken ebi-colour-light-grey

--- a/css/ebi-global-includes/_ebi_theme_settings.scss
+++ b/css/ebi-global-includes/_ebi_theme_settings.scss
@@ -3,7 +3,7 @@ $ebi-colour-dark: #222;
 $ebi-colour-light: #f8f8f8;
 $ebi-colour-dark-grey: #666;;
 $ebi-colour-medium-grey: #999;;
-$ebi-colour-light-grey: #f7f7f7;
+$ebi-colour-light-grey: #eaeaea;
 $ebi-colour-light-green: rgb(109,171,73);
 $ebi-colour-dark-green: rgb(56,145,152);
 $ebi-colour-petrol: rgb(0,124,130);
