Update compiled assets

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -87,7 +87,7 @@ a:active {
   padding: 0 0.2em; }
 
 .callout {
-  background: #f7f7f7;
+  background: #eaeaea;
   border: none; }
 
 div.warning {
