--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -84,6 +84,8 @@ div.warning {
 
 /* Do not show default page title on panel pages */
 body.page-node h2#page-title { display: none; }
+/* But show for revisions */
+body.page-node.page-node-revisions h2#page-title { display: none; } 
 
 /* Allow showing of drupal status messages statically */
 body.is-reveal-open #status-messages.static {
