--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -85,7 +85,7 @@ div.warning {
 /* Do not show default page title on panel pages */
 body.page-node h2#page-title { display: none; }
 /* But show for revisions */
-body.page-node.page-node-revisions h2#page-title { display: block; } 
+body.page-node.page-node-revisions h2#page-title { display: block; }
 
 /* Allow showing of drupal status messages statically */
 body.is-reveal-open #status-messages.static {
@@ -116,7 +116,7 @@ body div.caption-inner {
 /* Tinymce reset */
 /* tinyMce WYSIWYG fixes */
 body.mceContentBody,
-body#tinymce { font-size: 1rem; margin: 0 1em; overflow-y: scroll !important; }
+body#tinymce { font-size: 1rem; padding: 0 1em; overflow-y: scroll !important; }
 
 /* For some drupal views we need to absue li items as columns */
 li.columns { list-style-type: none; }
