Only show embl toggle when Foundation is running

--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -504,7 +504,7 @@ a:active {
     }
     .button.hover,
     .button:hover { background-color: #888; }
-    .button::after {
+    .button[aria-expanded="false"]::after {
       content: '';
       display: block;
       width: 0;
