--- a/css/foundation/_settings.scss
+++ b/css/foundation/_settings.scss
@@ -64,8 +64,7 @@
 @import 'libraries/foundation-6/scss/global';
 @import 'css/ebi-global-includes/ebi_theme_settings'; // override foundation with EBI styling
 @import 'css/ebi-global-includes/badge'; // custom badge class
-// if you wish to specify your own service defaults...
-// @import 'css/ebi-gloabl-includes/ebi_foundation_overides';
+@import 'css/ebi-global-includes/ebi_foundation_overides';
 
 // Components
 @import 'libraries/foundation-6/scss/grid/grid';
@@ -695,3 +694,6 @@ $use-animations: false;
 
 // invoke Foundation
 @include foundation-everything;
+
+// ebi-specific fixes
+@include ebi-foundation-overides;
