--- a/css/foundation/_settings-common.scss
+++ b/css/foundation/_settings-common.scss
@@ -1,5 +1,4 @@
-// Note: this file will be built using 'npm run scss' or, directly, using 'npm run foundation-scss'.
-//       This file could become the the EBI theme and would move up one driectory to _ebi_global_theme.scss
+// These are the common settings for Foundation CSS that will be shared across all builds of the framework (full fat, lite, extras)
 
 //  Foundation for Sites Settings
 //  -----------------------------
@@ -641,69 +640,3 @@ $topbar-unstack-breakpoint: medium;
 // 37. Animations
 // -----------
 $use-animations: false;
-
-// 38. Invoke build process
-// ------------------------
-
-@mixin foundation-everything($flex: false) {
-  @if $flex {
-    $global-flexbox: true !global;
-  }
-
-  @include foundation-global-styles;
-  @if not $flex {
-    @include foundation-grid;
-  }
-  @else {
-    @include foundation-flex-grid;
-  }
-  @include foundation-typography;
-  @include foundation-forms;
-  @include foundation-button;
-  @include foundation-accordion;
-  @include foundation-accordion-menu;
-  @include foundation-badge;
-  @include foundation-breadcrumbs;
-  @include foundation-button-group;
-  @include foundation-callout;
-  @include foundation-close-button;
-  @include foundation-menu;
-  @include foundation-menu-icon;
-  @include foundation-drilldown-menu;
-  @include foundation-dropdown;
-  @include foundation-dropdown-menu;
-  @include foundation-responsive-embed;
-  @include foundation-label;
-  @include foundation-media-object;
-  @include foundation-off-canvas;
-  @include foundation-orbit;
-  @include foundation-pagination;
-  @include foundation-progress-bar;
-  @include foundation-slider;
-  @include foundation-sticky;
-  @include foundation-reveal;
-  @include foundation-switch;
-  @include foundation-table;
-  @include foundation-tabs;
-  @include foundation-thumbnail;
-  @include foundation-title-bar;
-  @include foundation-tooltip;
-  @include foundation-top-bar;
-  @include foundation-visibility-classes;
-  @include foundation-float-classes;
-
-  @if $use-animations {
-    @include motion-ui-transitions;
-    @include motion-ui-animations;
-  }
-
-  @if $flex {
-    @include foundation-flex-classes;
-  }
-}
-
-// invoke Foundation
-@include foundation-everything;
-
-// ebi-specific fixes
-@include ebi-foundation-overides;
