--- a/css/compliance-legacy-compatibility.css
+++ b/css/compliance-legacy-compatibility.css
@@ -37,22 +37,7 @@ img.float-l {
 
 .shortcuts h2,
 .shortcuts h3 {
-    border-bottom: 0 none;
-    font-size: 18px;
-    color: #333;
-    line-height: inherit;
-    background-color: #DDD;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 3px 0 1px 12px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-    -khtml-border-radius-topleft: 5px;
-    -khtml-border-radius-topright: 5px;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    font-size: 1.5rem;
 }
 
 .shortcuts>div { clear: both; margin-top: .5rem;}
