--- a/css/theme-ebi-training.css
+++ b/css/theme-ebi-training.css
@@ -18,6 +18,7 @@ a:active {
 h1 { color: #f7f7f7; }
 h2 { color: rgb(233,180,0); }
 h3 { color: #444444; }
+h4 { color: #222; }
 
 a.special { background-color: #7cd17c; }
 
