--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -178,7 +178,7 @@ nav a:hover {
     display: block;
     height: 50px;
     width: 67px;
-    background-image: url("https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
+    background-image: url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
     background-size: 64px 47px;
     background-repeat: no-repeat;
     margin-left: 6px; } }
@@ -622,7 +622,7 @@ footer a, footer a:visited {
     display: block;
     height: 53px;
     width: 89%;
-    background-image: url("https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/EMBL_EBI_Logo_black.svg");
+    background-image: url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_black.svg");
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: -.25rem;
