Update complied code

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -1098,6 +1098,32 @@ table.tablesorter thead tr th.tablesorter-headerDesc {
 table.no-stripe tbody tr:nth-child(even) {
   background-color: #fff; }
 
+/* Data table solutions */
+/* Tables with custom padding */
+table .padding-none th,
+table .padding-none td
+table.padding-none tbody th,
+table.padding-none tbody td,
+table.data-table tbody th,
+table.data-table tbody td {
+  padding: 0; }
+
+table .padding-small th,
+table .padding-small td
+table.padding-small tbody th,
+table.padding-small tbody td {
+  padding: 0rem 0.2rem 0.2rem; }
+
+/* None 100% wide tables */
+table.data-table,
+table.width-auto {
+  width: auto; }
+
+/* some images should be stretched, such as sparkline-style gifs */
+table.data-table img,
+img.stretch {
+  height: inherit; }
+
 /* wide screen support */
 @media screen and (min-width: 40em) {
   body.full-width .row,
