--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -1103,15 +1103,15 @@ table.no-stripe tbody tr:nth-child(even) {
 table .padding-none th,
 table .padding-none td
 table.padding-none tbody th,
-table.padding-none tbody td,
-table.data-table tbody th,
-table.data-table tbody td {
+table.padding-none tbody td {
   padding: 0; }
 
 table .padding-small th,
 table .padding-small td
 table.padding-small tbody th,
-table.padding-small tbody td {
+table.padding-small tbody td,
+table.data-table tbody th,
+table.data-table tbody td {
   padding: 0rem 0.2rem 0.2rem; }
 
 /* None 100% wide tables */
@@ -1123,6 +1123,12 @@ table.width-auto {
 table.data-table img,
 img.stretch {
   height: inherit; }
+
+/* align table cell text to top */
+table.data-table td,
+table.align-top td,
+table td.align-top {
+  vertical-align: top; }
 
 /* wide screen support */
 @media screen and (min-width: 40em) {
