Increase row width to 80rem (1280px)

--- a/css/foundation/_settings-common.scss
+++ b/css/foundation/_settings-common.scss
@@ -118,7 +118,7 @@
 // ---------
 
 // $global-font-size: 100%;
-// $global-width: rem-calc(1200);
+$global-width: rem-calc(1280);
 // $global-lineheight: 1.5;
 $foundation-palette: (
   primary: $primary-color,
