--- a/libraries/foundation-6/scss/grid/_flex-grid.scss
+++ b/libraries/foundation-6/scss/grid/_flex-grid.scss
@@ -143,7 +143,12 @@
 
     // Expanded row
     &.expanded {
-      @include grid-row-size(expand);
+      @include grid-row-size(expand); 
+      
+      .row {
+        margin-right: auto;
+        margin-left: auto;
+      }
     }
 
     &:not(.expanded) .row {
@@ -173,7 +178,8 @@
   // Column row
   // The double .row class is needed to bump up the specificity
   .column.row.row {
-    display: flex;
+    float: none;
+    display: block;
   }
 
   // To properly nest a column row, padding and margin is removed
