--- a/css/theme-light.css
+++ b/css/theme-light.css
@@ -28,7 +28,7 @@ a.special { background-color: #7cd17c; }
 
 .menu .active > a,
 .tag,
-.tabs-title > a:hover
+.tabs-title > a:hover,
 .button,
 .button.primary {
   background-color: rgb(0,124,130);
