Further optimise data tables
related to #65

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -1104,7 +1104,8 @@ table .padding-none th,
 table .padding-none td
 table.padding-none tbody th,
 table.padding-none tbody td {
-  padding: 0; }
+  padding: 0;
+  border-spacing: 0; }
 
 table .padding-small th,
 table .padding-small td
@@ -1112,7 +1113,12 @@ table.padding-small tbody th,
 table.padding-small tbody td,
 table.data-table tbody th,
 table.data-table tbody td {
-  padding: 0rem 0.2rem 0.2rem; }
+  padding: 0rem 0.2rem 0.2rem;
+  border-spacing: 0; }
+
+/* border lines on data tables without striping */
+table.no-stripe.data-table tbody td {
+  border-top: 1px solid #eaeaea; }
 
 /* None 100% wide tables */
 table.data-table,
@@ -1125,10 +1131,15 @@ img.stretch {
   height: inherit; }
 
 /* align table cell text to top */
+table.data-table th,
 table.data-table td,
 table.align-top td,
 table td.align-top {
   vertical-align: top; }
+
+/* highlight table header background */
+table.data-table thead {
+  background: #eaeaea; }
 
 /* wide screen support */
 @media screen and (min-width: 40em) {
