--- a/css/theme-ebi-industry.css
+++ b/css/theme-ebi-industry.css
@@ -23,7 +23,7 @@ a.special { background-color: #7cd17c; }
 
 .menu .active > a,
 .tag,
-.tabs-title > a:hover
+.tabs-title > a:hover,
 .button,
 .button.primary {
   background-color: rgb(0,134,180);
