--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -273,11 +273,6 @@ a:active {
         padding: .6rem .35rem;
     }
   }
-  @media screen and (min-width: 40em) {
-    ul#global-nav {
-      padding-top: 10px;
-    }
-  }
 
   /*
     LOCAL MASTHEAD
@@ -322,7 +317,6 @@ a:active {
     nav ul.menu li.active { border-right: 0; }
 
     nav ul.menu li.float-right { border-right: none; }
-    nav ul.menu li.float-right button { margin: 0;margin-top: -10px;}
   }
 
   div#local-title { margin-bottom: 1rem; }
@@ -494,12 +488,12 @@ a:active {
     .button.hover,
     .button:focus,
     .button:hover {
-      background: no-repeat 4px 50% url('../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg');
-      padding-left: 113px;
-      background-size: 105px;
-      font-size: 15px;
+      background: no-repeat 4px 50% url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
+      padding-left: 108px;
+      background-size: 100px;
       padding-right: 17px;
-      height: 47px;
+      height: 37px;
+      line-height: 12px;
     }
     .button.hover,
     .button:hover { background-color: #888; }
@@ -512,8 +506,8 @@ a:active {
       border-color: #fff transparent transparent;
       border-top-style: solid;
       position: absolute;
-      top: 22px;
-      margin-left: 57px;
+      top: 18px;
+      margin-left: 55px;
     }
   }
   // begin to hide bits of dropdown toggle as screen shrinks
