Do not spill .code out side

--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -466,6 +466,7 @@ a:active {
     background-color: #e6e6e6;
     border: 1px solid #cacaca;
     padding: 0.125rem 0.3125rem 0.0625rem;
+    overflow-x: auto;
   }
   .kbd {
     margin: 0;
