have no background on labels by default

--- a/css/foundation/_settings-common.scss
+++ b/css/foundation/_settings-common.scss
@@ -432,7 +432,7 @@ $input-radius: $global-radius;
 // 20. Label
 // ---------
 
-// $label-background: $primary-color;
+$label-background: none;
 // $label-color: foreground($label-background);
 $label-font-size: 0.8rem;
 // $label-padding: 0.33333rem 0.5rem;
