--- a/libraries/foundation-6/css/foundation.css
+++ b/libraries/foundation-6/css/foundation.css
@@ -2741,7 +2741,7 @@ select {
   line-height: 1;
   white-space: nowrap;
   cursor: default;
-  background: white;
+  background: none;
   color: #007c82; }
   .label.primary {
     background: #1779ba;
