--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -646,6 +646,23 @@ footer a, footer a:visited {
   #ebi-footer-meta p.address {
     color: #888; }
 
+/* Vertical menu trees */
+ul.tree.vertical {
+  margin-left: 0;
+  font-size: .9rem; }
+  ul.tree.vertical li {
+    margin-bottom: .5rem; }
+  ul.tree.vertical li > a {
+    display: inline;
+    padding: 0; }
+  ul.tree.vertical li > a.active:before {
+    content: "9 ";
+    font-family: 'EBI-Functional'; }
+  ul.tree.vertical li > ul.tree.vertical {
+    margin: 0.5rem;
+    padding-left: 0.5rem;
+    border-left: 3px solid #999; }
+
 /*
     MISC TWEAKS
   =============================== */
