--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -597,7 +597,7 @@ a:active {
     li > ul.tree.vertical {
       margin: 0.5rem ;
       padding-left: 0.5rem;
-      border-left: 3px solid #999;
+      border-left: 1px solid #ddd;
     }
   }
 
