--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -665,7 +665,7 @@ ul.tree.vertical {
   ul.tree.vertical li > ul.tree.vertical {
     margin: 0.5rem;
     padding-left: 0.5rem;
-    border-left: 3px solid #999; }
+    border-left: 1px solid #ddd; }
 
 /*
     MISC TWEAKS
