--- a/css/foundation/_settings-lite.scss
+++ b/css/foundation/_settings-lite.scss
@@ -57,6 +57,7 @@
   // @include foundation-tooltip;
   // @include foundation-top-bar;
   @include foundation-visibility-classes;
+  @include ebi-visibility;
   @include foundation-float-classes;
 
   // @if $use-animations {
