--- a/libraries/foundation-6/css/foundation-lite.css
+++ b/libraries/foundation-6/css/foundation-lite.css
@@ -1832,6 +1832,12 @@ kbd {
     .show-for-portrait {
       display: block !important; } }
 
+.is-visible-block {
+  display: block !important; }
+
+.is-visible-inline {
+  display: inline-block !important; }
+
 .float-left {
   float: left !important; }
 
