--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -124,8 +124,8 @@ a:active {
 
   /* Mobile logo */
   @media screen and (max-width: 40em) {
-    #local-masthead nav ul#global-nav.menu li#home { display: none; }
-    #local-masthead nav ul#global-nav.menu li#home-mobile a {
+    #local-masthead nav ul#global-nav.menu li.home { display: none; }
+    #local-masthead nav ul#global-nav.menu li.home-mobile a {
       display: block;
       height: 50px;
       width: 67px;
@@ -136,11 +136,11 @@ a:active {
     }
   }
   @media screen and (min-width: 40em) {
-    #local-masthead nav ul#global-nav.menu li#home-mobile { display: none; }
+    #local-masthead nav ul#global-nav.menu li.home-mobile { display: none; }
   }
 
   /* Disable global-masthead search when told */
-  body.no-global-search #global-masthead ul#global-nav li#search { display: none; }
+  body.no-global-search #global-masthead ul#global-nav li.search { display: none; }
 
   #global-masthead {
     ul#global-nav li a:hover,
@@ -158,42 +158,69 @@ a:active {
     }
 
     /* custom colour for Home */
-    ul li#home a:hover,
-    ul li#home a:active,
-    ul li#home a:focus {
+    ul li.home a:before {
+      font-family: 'EBI-Generic';
+      content: 'H ';
+    }
+    ul li.home a:hover,
+    ul li.home a:active,
+    ul li.home a:focus {
       background-color: $ebi-colour-petrol;
     }
 
     /* custom colour for Services */
-    ul li#services a:hover,
-    ul li#services a:active,
-    ul li#services a:focus {
+    ul li.services a:before {
+      font-family: 'EBI-Generic';
+      content: '( ';
+    }
+    ul li.services a:hover,
+    ul li.services a:active,
+    ul li.services a:focus {
       background-color: $ebi-colour-services;
     }
 
     /* custom colour for Research */
-    ul li#research a:hover,
-    ul li#research a:active,
-    ul li#research a:focus {
+    ul li.research a:before {
+      font-family: 'EBI-Generic';
+      content: ') ';
+    }
+    ul li.research a:hover,
+    ul li.research a:active,
+    ul li.research a:focus {
       background-color: $ebi-colour-light-green;
     }
 
     /* custom colour for Training */
-    ul li#training a:hover,
-    ul li#training a:active,
-    ul li#training a:focus {
+    ul li.training a:before {
+      font-family: 'EBI-Generic';
+      content: 't ';
+    }
+    ul li.training a:hover,
+    ul li.training a:active,
+    ul li.training a:focus {
       background-color: $ebi-colour-training;
     }
 
     /* custom colour for About us */
-    ul li#about a:hover,
-    ul li#about a:active,
-    ul li#about a:focus,
-    ul li#about-us a:hover,
-    ul li#about-us a:active,
-    ul li#about-us a:focus {
+    ul li.about a:before {
+      font-family: 'EBI-Generic';
+      content: 'i ';
+    }
+    ul li.about a:hover,
+    ul li.about a:active,
+    ul li.about a:focus,
+    ul li.about-us a:hover,
+    ul li.about-us a:active,
+    ul li.about-us a:focus {
       background-color: $ebi-colour-services;
     }
+
+    /* Custom icon for search */
+    ul li.search a:before {
+      font-family: 'EBI-Functional';
+      content: '1';
+    }
+
   }
 
   header .masthead {
@@ -256,7 +283,7 @@ a:active {
     }
 
     #local-masthead nav ul#global-nav.menu li { float: none; display: inline-block; }
-    #local-masthead nav ul#global-nav.menu li#home-mobile { float: left; }
+    #local-masthead nav ul#global-nav.menu li.home-mobile { float: left; }
 
     ul#global-nav { text-align: right; }
 
